<resources>
    <string name="app_name">Activity Overview</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_here">New Here?</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="already_member">Already Member?</string>
    <string name="compose">Compose</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="compose_email">Compose email</string>
    <string name="send">Send</string>
    <string name="login_error">Email/Password is not correct</string>
    <string name="register_error">Full Name/Email/Password is not correct</string>
    <string name="compose_error">To/Subject/Compose email is not correct</string>
    <string name="compose_success">Successful sending!</string>
</resources>